--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <meta
+      name="description"
+      content="Teaching independence to the lives of the people you love with reliable, individualized emotional and behavioral therapy"
+    />
+    <title>McGrew behavior services</title>
+    <link rel="stylesheet" href="styles/main.css" />
+    <body>
+      <header>
+        <div class="header__container">
+          <div class="header__nav">
+            <div class="header__nav-logo">
+              <img src="./images/Logo.png" alt="logo" />
+            </div>
+            <div class="header__trigger">
+              <a class="header__trigger-link" href="#">MENU</a>
+            </div>
+            <div class="header__nav-menu">
+              <ul id="menu">
+                <li><a href="#">HOME</a></li>
+                <li><a href="#about">ABOUT US</a></li>
+                <li><a href="#contact">CONTACT</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="header__title">
+            <h2>We can&nbsp;<span>help.</span></h2>
+            <p>
+              Teaching independence to the lives of the people you love with
+              reliable, individualized emotional and behavioral therapy.
+            </p>
+          </div>
+
+          <form action="https://www.google.com/">
+            <button class="btn">FIND HELP HERE</button>
+          </form>
+        </div>
+      </header>
+      <main>
+        <section class="sponsors container">
+          <img src="./images/Magellan.png" alt="magelan" />
+          <img src="./images/Kaiser%20Permanente.png" alt="kaiser" />
+          <img src="./images/Anthem.png" alt="anthem" />
+          <img src="./images/NorthBay.png" alt="northbay" />
+          <img src="./images/Partnership.png" alt="pantnership" />
+          <img src="./images/Aetna.png" alt="aetna" />
+        </section>
+        <section id="about" class="support">
+          <h2>Support For People Of All Walks of Life</h2>
+          <p>
+            Children as young as 2 years old may begin to develop behaviors
+            which need extra support and attention.
+          </p>
+          <div class="support__human-img">
+            <img src="./images/human.png" alt="human" />
+          </div>
+        </section>
+        <section class="services">
+          <h3>McGrew Behavior Services Helps...</h3>
+          <p>
+            Families, organizations and health care providers in Northern
+            California. Our knowledge and experience provide the specialized
+            support people need when overcoming behavioral challenges.
+          </p>
+          <button class="btn">CONTACT us</button>
+        </section>
+        <section class="slide">
+          <div class="slide__bg"></div>
+          <h2>In Home Support</h2>
+          <div class="slide__photo">
+            <img src="./images/photo.jpg" alt="photo" />
+          </div>
+        </section>
+        <section class="join">
+          <div class="join__photo">
+            <img src="./images/Picture600.jpg" alt="photo" />
+          </div>
+          <div class="join__text">
+            <p class="quote">
+              Be a part of something bigger than yourself. Make a difference.
+            </p>
+            <h2>Join Our <span>Team.</span></h2>
+            <p>
+              We are always looking for highly motivated individuals who aligned
+              with our committment to making a difference in the lives of other
+              people. Whether you’re a BCBA or interested in ABA work we are
+              interested in talking to you!
+            </p>
+            <button class="btn">FIND WHAT’S AVAILABLE</button>
+          </div>
+        </section>
+      </main>
+
+      <footer id="contact">
+        <hr />
+        <div class="menu">
+          <ul>
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">ABOUT US</a></li>
+            <li><a href="#">CONTACT</a></li>
+            <li><a href="#">CAREERS</a></li>
+          </ul>
+        </div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <p>120 Theresa Ave, American Canyon, CA 94503</p>
+        <p><a class="tel" href="tel:+707-561-0134">707.561.0134</a></p>
+        <p>
+          <a
+            class="mail"
+            href="mailto:familyresources@mbisinc.com?subject = Feedback&body = Message"
+            >familyresources@mbisinc.com
+          </a>
+        </p>
+        <hr class="down" />
+        <p class="copy">
+          Copyright Ⓒ 2017 McGrews Behavior Services All Rights Reserved
+        </p>
+      </footer>
+    </body>
   </head>
-  <body>
-    <img src="./images/logo.svg" alt="Logo">
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
-  </body>
+  <script
+    src="https://code.jquery.com/jquery-3.1.1.min.js"
+    integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+    crossorigin="anonymous"
+  ></script>
+  <script src="scripts/main.js"></script>
 </html>
